--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latest Alerts | Official Portal</title>
+    <title>Latest Alerts | MEO OFFICE CHIMAKURTHY OFFICIAL WEBSITE</title>
     <style>
         :root {
             --primary: #1a73e8;
