--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
 
 <nav class="top-nav">
-    <h1>OFFICIAL PORTAL</h1>
+    <h1>OFFICIAL PORTAL MEO OFFICE CHIMAKURTHY</h1>
     <div id="sync-timer">Checking for updates...</div>
 </nav>
 
